# -test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: TODO_PLAN.md
issues/: .meta.csv  2026-03-19_initial.csv  2026-03-19_quant-v2-optimization.csv  2026-03-20_00-00-00_round2.csv  2026-03-20_07-20-00_round4.csv  2026-03-20_09-00-00_round3.csv
plan/: 2026-03-19_14-00-00-quant-v2-optimization.md
prompts/: issues_csv_execute.md  iteration.md  plan.md  plan_to_issues_csv.md  regression.md
results/regression/: 2026-03-19_14-30-00.md
src/: __init__.py  cli.py  config.py
src/backtest/: __init__.py  commission.py  engine.py  slippage.py  tca.py  walk_forward.py
src/data/: __init__.py  cache.py  fetcher.py  loader.py
src/evaluation/: __init__.py  metrics.py  report.py  visualization.py
src/factors/: __init__.py  cross_sectional.py  factor_registry.py  fundamental.py  technical.py
src/optimization/: __init__.py  bayesian_optimizer.py  ga_optimizer.py  grid_search.py  nsga_optimizer.py  pso_optimizer.py
src/portfolio/: __init__.py  factor_portfolio.py  optimizer.py  risk_manager.py
src/strategies/: __init__.py  base.py
src/strategies/breakout/: __init__.py
src/strategies/mean_reversion/: __init__.py
src/strategies/ml/: __init__.py
src/strategies/momentum/: __init__.py
src/strategies/multi_timeframe/: __init__.py
tests/: conftest.py  test_backtest.py  test_backtest_integration.py  test_cli.py  test_data.py  test_evaluation.py  test_factors.py  test_optimization.py  test_portfolio.py  test_strategies.py
