[project]
name = "quant-v2"
version = "0.1.0"
description = "Stock Quantitative Analysis System v2"
requires-python = ">=3.10"
dependencies = [
    "jqdatasdk>=1.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "backtrader>=1.9.78",
    "deap>=1.4",
    "pygad>=3.2",
    "optuna>=3.5",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyarrow>=15",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
quant-v2 = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
